# pytorch_exmample

./: README.md  Singularity  default.conf  pyproject.toml  run.sh  setup.sh
scripts/: example.py
