[tool.poetry]
name = "pytoch_example"
version = "0.1.0"
description = ""
authors = ["belledon <mbelledonne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
torch = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
